--- a/index.html
+++ b/index.html
@@ -3,10 +3,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta mame="author" content="Italilpessy Wilmore Carlos" />
+    <meta mame="description" content="Italilpessy Wilmore Carlos Homepage" />
+    <meta name="keywords" content="Italilpessy Wilmore Carlos, Fuzzy, Fuzzy Interpolation"
+    >
+    <meta name="author" content="Italilpessy Wilmore Carlos">
     <title>Italilpessy Wilmore Carlos is Homepage</title>
 </head>
 <body>
-    
+    <header>
+        <table cellspacing="20">
+            <tr>
+                <td>
+                    <img src="https://raw.githubusercontent.com/Wilmore/profil/master/circle-cropped.png" alt="profil-picture" width="200">
+                </td>
+                <td>
+                    <h1>Italilpessy Wilmore Carlos</h1>
+                    <h1>Student of UNIVERSITAS KLABAT</h1>
+                    <p>
+                        Perumahan AGAPE Griya jaga XVII Blok B9/17, Tumaluntung, Minahasa Utara, Sulawesi Utara
+                        <br>
+                        Email: <em>s21910135.student.unklab.ac.id</em>
+                        <br>
+                        phone: +6289698143756
+                        <br>
+                        instagram : @wil.italilpessy
+                    </p>
+                </td>
+            </tr>
+        </table>
+    </header>
+    <nav>
+        <a href="">Biography</a>
+        <a href="#hobby">| Hobby</a>
+        <a href="#education">| Educarion</a>
+        <a href="#skills">| Skills</a>
+        <a href="#contact-me">| Contact Me</a>
+    </nav>
+    <section id="hobby">
+        <hr>
+        <h1>Hobby</h1>
+        <p>Interestet to sport and survival</p>
+    </section>
+    <section id="educations">
+        <hr>
+        <h1>Educarion</h1>
+        <ol>
+            <li>
+                <p>
+                    SD ADVENT AMURANG 
+                </p>
+            </li>
+            <li>
+                <p>
+                    SMP ADVENT TUMPAAN
+                </p>
+            </li>
+            <li>
+                <p>
+                    SMA PIONEER MANADO
+                </p>
+            </li>
+        </ol>
+    </section>
+    <section id="skills">
+        <hr />
+        <h1>Skills</h1>
+        <table cellspacing="20">
+          <tr>
+            <td>
+              <table cellspacing="10">
+                <tr>
+                  <td>HTML</td>
+                  <td>⭐️⭐️⭐️</td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+        </table>
+      </section>
+      <section id="contac-me">
+          <hr>
+          <h1>
+              Contact Me
+          </h1>
+          <form>
+              <label for="name">Your Name : </label>
+              <input type="text" name="name" id="name"required />
+              <br>
+              <br>
+              <label for="message">Your Message : </label>
+              <br>
+              <textarea name="message" id="message" cols="40" rows="10" placeholder="type your message..."></textarea>
+              <br>
+              <br>
+              <input type="submit"name="submit">
+          </form>
+      </section>
 </body>
 </html>
